// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscribing to the DOM should clear all DOM nodes 1`] = `
"<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px)\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px) and (max-height: 500px)\\"></style>
  <style data-fela-type=\\"KEYFRAME\\" type=\\"text/css\\"></style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should render keyframes to a DOM node 1`] = `
"<html>

<head>
  <style data-fela-type=\\"KEYFRAME\\" type=\\"text/css\\">
    @-webkit-keyframes _13y0w5r {
      from {
        color: red
      }
      to {
        color: blue
      }
    }

    @-moz-keyframes _13y0w5r {
      from {
        color: red
      }
      to {
        color: blue
      }
    }

    @keyframes _13y0w5r {
      from {
        color: red
      }
      to {
        color: blue
      }
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should render media rules and support rules to single DOM nodes 1`] = `
"<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\">
    ._t2jx0m {
      color: blue
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" data-fela-support=\\"true\\">
    @supports (display: flex) {
      ._ku62hq {
        display: flex
      }
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px)\\">
    ._jm3j3e {
      color: red
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px) and (max-height: 500px)\\">
    ._1wt986u {
      color: yellow
    }
  </style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" data-fela-support=\\"true\\" media=\\"(min-width: 300px) and (max-height: 500px)\\">
    @supports (display: grid) {
      ._16lql2s {
        display: grid
      }
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should render rules to a DOM node 1`] = `
"<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\">
    ._p2crlx {
      background-color: red
    }

    ._t2jx0m {
      color: blue
    }

    ._1401qjb:hover {
      color: red
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should render static styles to a DOM node 1`] = `
"<html>

<head>
  <style data-fela-type=\\"STATIC\\" type=\\"text/css\\">
    body,
    html {
      background-color: red;
      color: blue
    }
  </style>
</head>

<body></body>

</html>"
`;

exports[`Subscribing to the DOM should use insertRule 1`] = `
Array [
  "<html>

<head>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px)\\"></style>
  <style data-fela-type=\\"RULE\\" type=\\"text/css\\" media=\\"(min-width: 300px) and (max-height: 500px)\\"></style>
  <style data-fela-type=\\"KEYFRAME\\" type=\\"text/css\\">
    @-webkit-keyframes _13y0w5r {
      from {
        color: red
      }
      to {
        color: blue
      }
    }

    @-moz-keyframes _13y0w5r {
      from {
        color: red
      }
      to {
        color: blue
      }
    }

    @keyframes _13y0w5r {
      from {
        color: red
      }
      to {
        color: blue
      }
    }
  </style>
</head>

<body></body>

</html>",
  Object {
    "": Array [
      CSSStyleRule {
        "__ends": 20,
        "__starts": 0,
        "parentRule": null,
        "parentStyleSheet": CSSStyleSheet {
          "cssRules": [Circular],
          "parentStyleSheet": null,
        },
        "selectorText": "._t2jx0m",
        "style": CSSStyleDeclaration {
          "0": "color",
          "__starts": 8,
          "_importants": Object {
            "color": "",
          },
          "color": "blue",
          "length": 1,
          "parentRule": [Circular],
        },
      },
    ],
    "(min-width: 300px)": Array [
      CSSStyleRule {
        "__ends": 19,
        "__starts": 0,
        "parentRule": null,
        "parentStyleSheet": CSSStyleSheet {
          "cssRules": [Circular],
          "parentStyleSheet": null,
        },
        "selectorText": "._jm3j3e",
        "style": CSSStyleDeclaration {
          "0": "color",
          "__starts": 8,
          "_importants": Object {
            "color": "",
          },
          "color": "red",
          "length": 1,
          "parentRule": [Circular],
        },
      },
    ],
    "(min-width: 300px) and (max-height: 500px)": Array [
      CSSStyleRule {
        "__ends": 23,
        "__starts": 0,
        "parentRule": null,
        "parentStyleSheet": CSSStyleSheet {
          "cssRules": [Circular],
          "parentStyleSheet": null,
        },
        "selectorText": "._1wt986u",
        "style": CSSStyleDeclaration {
          "0": "color",
          "__starts": 9,
          "_importants": Object {
            "color": "",
          },
          "color": "yellow",
          "length": 1,
          "parentRule": [Circular],
        },
      },
    ],
  },
]
`;
